// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render the preview item with props 1`] = `
<div>
  <div
    class="lesson-content__item"
  >
    <h6
      class="lesson-content__title"
    >
      Test title
    </h6>
    <p
      class="lesson-content__text"
    >
      Content
    </p>
    <div
      class="buttons"
    >
      <img
        alt="Delete Question"
        class="buttons__bin"
        src="bin-icon.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Should render the preview item without props 1`] = `
<div>
  <div
    class="lesson-content__item"
  >
    <h6
      class="lesson-content__title"
    />
    <p
      class="lesson-content__text"
    />
    <div
      class="buttons"
    >
      <img
        alt="Delete Question"
        class="buttons__bin"
        src="bin-icon.svg"
      />
    </div>
  </div>
</div>
`;
